--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -2,8 +2,12 @@
 <ion-content  class="splash">
 <div class="list signUpPadding">
   <div class="button-bar button-bottom">
-  <a class="button button-outline" ng-click="signUp()">Sign Up</a>
-  <a class="button button-outline" ng-click="welcome()">Login</a>
+  <button class="button button-royal" ng-click="signUp()">
+    Sign Up
+  </button>
+  <button class="button button-royal" ng-click="welcome()">
+    Login
+  </button>
 </div>
 </div>
 </ion-content>
