removed splash test

--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Welcome">
-<ion-content  class="splash">
+<ion-content>
 <div class="list signUpPadding">
   <div class="button-bar button-bottom">
   <button class="button button-royal" ng-click="signUp()">
