Adds settings screen. Changing your username works but do not try changing your password because it will crash the server. Bug fix coming.

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -12,16 +12,16 @@
           <label class="item-input-wrapper">
           <input type="text" placeholder="Change Bitname", ng-model="user.username">
           </label>
-          <button class="button button-royal", ng-click="changeBitName(user)">
+          <button class="button button-royal", ng-click="changeUsername(user)">
             Submit
           </button>
         </div>
 
         <div class="item item-input-inset">
           <label class="item-input-wrapper">
-          <input type="text" placeholder="Change Password">
+          <input type="password" placeholder="Change Password" ng-model="placer.password">
           </label>
-          <button class="button button-royal">
+          <button class="button button-royal" ng-click="changePassword(placer)">
             Submit
           </button>
         </div>
