following functionality fixes

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
       <div class="padding profilePadding">
-       <div style="text-align: center"> <img src = "img/defaultProfile.png"> 
+       <div style="text-align: center"> <img src = "img/defaultProfile.png">
        <p><p>
        <i id="profileFont">{{profileData.firstName}} {{profileData.lastName}}</i>
        <br>
@@ -14,8 +14,8 @@
           <button class="button button-royal" ng-click="goBack()">
             Go Back
           </button>
-          <button id="followButton" class="button button-royal" ng-click="follow()">
-            Follow
+          <button class="button button-royal followButton" ng-click="follow()">
+            
           </button>
         </div>
       </div>
