--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -19,12 +19,21 @@
 
         <div class="item item-input-inset">
           <label class="item-input-wrapper">
-          <input type="password" placeholder="Change Password" ng-model="placer.password">
+          <input type="password" placeholder="Change Password" ng-model="placer.password" ng-change="showConfirm()">
+          </label>
+          <button class="button button-royal removeMe">
+            Submit
+          </button>
+        </div>
+        <div class="item item-input-inset hideMe">
+          <label class="item-input-wrapper">
+          <input type="password" placeholder="Confirm Password" ng-model="placer.confirmPassword" ng-change="compareTo(placer.password, placer.confirmPassword)">
           </label>
           <button class="button button-royal" ng-click="changePassword(placer)">
             Submit
           </button>
         </div>
+        <h4 class="confirmTextSettings hideMe" style="text-align: center"> Passwords Do Not Match </h4>
       </div>
 
       </div>
