--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Welcome">
-<ion-content  class="welcome_content" scroll="false">
+<ion-content  class="welcome-content" scroll="false">
 <div class="button-bar button-bottom">
   <a class="button button-outline" ng-click="signUp()">Sign Up</a>
   <a class="button button-outline" ng-click="welcome()">Login</a>
