Profile and Account Pages display bits
A user's bits are now displayed on their profile and account pages.

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -9,6 +9,9 @@
        <i id="usernameFont">{{profileData.username}}</i>
        </p></p></div>
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
+      <p>
+        <i>Bits: {{profileData.bits}}</i>
+      </P>
 
 <!--        <div class="list list-inset">
 
