--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -9,6 +9,9 @@
        <i id="usernameFont">{{profileData.username}}</i>
        </p></p></div>
        <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
+      <p>
+        <i>Bits: {{profileData.bits}}</i>
+      </P>
 
         <div class="container center-children">
           <button class="button button-royal" ng-click="goBack()">
