--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Profile">
   <ion-content>
+    <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()">
+    </ion-refresher>
     <div class="list">
       <div class="padding profilePadding">
        <div style="text-align: center"> <img src = "img/defaultProfile.png">
