profile picture in the works

--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -36,11 +36,20 @@
             <option>Female</option>
           </select>
         </label>
-        <label id="bdaytext" class="item item-input item-select"  ng-click="showPopup()" >
+        <label id="bdaytext" class="item item-input item-select" ng-click="showPopup()" >
           <div class="input-label" >
             Birthday
           </div>
         </label>
+        <p></p>
+         <label class="list" ng-controller="imageController" ng-click="addImage()">
+           <a class="item item-icon-left">
+    <i class="icon ion-camera"></i>
+    Add Profile Picture
+  </a>
+        </label>
+  </label>
+
         <button class="button button-block button-royal" ng-click="submitForm()">
           Create Account
         </button>
