--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,7 +5,7 @@
 .signUpPadding {
 	margin: auto;
 	position: absolute;
- 	top: 0; left: 0; bottom: 0; right: 0;
+ 	top: 40px; left: 0; bottom: 0; right: 0;
 }
 
 .confirmTextSettings {
@@ -92,3 +92,61 @@ ion-content {
 	background-color: #502d7f;
 }
 
+.image-list-thumb {
+    padding: 2px 2px 2px 2px;
+    height: 100px;
+}
+ 
+.image-modal {
+    width: 100% !important;
+    height: 100%;
+    top: 0 !important;
+    left: 0 !important;
+}
+ 
+.transparent {
+    background: transparent !important;
+}
+ 
+.fullscreen-image {
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    overflow: auto;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+ 
+.slider {
+    width: 100%;
+    height: 100%;
+}
+	
+.centerme {
+    margin: 0 auto;
+    width: 100%;
+    height:100%;
+}
+ 
+.fullscreen-player {
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    overflow: none;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+#myimage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50%;
+
+}
