--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -42,7 +42,7 @@
           </div>
         </label>
         <p></p>
-         <label class="list" ng-controller="imageController" ng-click="addImage()">
+         <label class="list" ng-controller="imageController" ng-click="showImages()">
            <a class="item item-icon-left">
     <i class="icon ion-camera"></i>
     Add Profile Picture
