--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -28,10 +28,18 @@
         </div>
     </ion-list>
     </ion-content>
-    <ion-footer-bar class="bar-royal">
-        <input id="booleOutInput" type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
-        <input id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)" />
-        <input id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)"/>
+    <ion-footer-bar class="bar-royal bitstream-footer">
+    <div class="row">
+        <div class="col col-66">
+            <input id="booleOutInput" type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
+        </div>
+        <div class="col col-33">
+            <div class="button-bar">
+                <a class="button button-royal" id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)">1</a>
+                <a class="button button-royal" id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)">0</a>
+            </div>           
+        </div>
+    </div>       
     </ion-footer-bar>
 </ion-view>
 
