--- a/www/templates/pieChart.html
+++ b/www/templates/pieChart.html
@@ -1,2 +1,2 @@
-<div id="pie"></div>
-<script src="js/chartData.js"></script>
+	<div ng-click="closePopup()" id="pie"></div>
+	<script src="js/chartData.js"></script>
