--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -10,11 +10,9 @@
                     <p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-
                 <button class="buttonDown{{BooleOut._id}} button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]"></button>
                 <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id); replyShow[BooleOut._id] = true">
                 </button>
-
             </div>
 
             <div class="list card" ng-show="replyShow[BooleOut._id]" ng-repeat="reply in allReplies[BooleOut._id]" type="item-text-wrap" href="#/tab/bitstream">
@@ -23,20 +21,19 @@
                     <h2><b ng-click="toProfile(reply.username)">{{reply.username}}</b></h2>
                     <p ng-click="toProfile(reply.username)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
                 </div>
-            </div>
-            
+            </div>            
         </div>
     </ion-list>
     </ion-content>
     <ion-footer-bar class="bar-royal bitstream-footer">
     <div class="row">
         <div class="col col-66">
-            <input id="booleOutInput" type="text" name="term" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
+            <input type="text" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
         </div>
         <div class="col col-33">
             <div class="button-bar">
-                <a class="button button-royal" id="postOne" type="submit" name="search" value="1" ng-click="postBooleOut(1)">1</a>
-                <a class="button button-royal" id="postZero" type="submit" name="search" value="0" ng-click="postBooleOut(0)">0</a>
+                <a class="button button-royal" type="submit" ng-click="postBooleOut(1)">1</a>
+                <a class="button button-royal" type="submit" ng-click="postBooleOut(0)">0</a>
             </div>           
         </div>
     </div>       
