added visualization in the profile page. Popup now displays dynamically

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -27,7 +27,7 @@
             <div class="item item-avatar" >
               <img src="img/stock_picture.png">
               <h2><b>{{BooleOut.username}}</b></h2>
-              <p>{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
+              <p ng-click="showChart(BooleOut)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
 
@@ -41,7 +41,7 @@
               <div class="item item-avatar" >
                 <img src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(reply.username)">{{reply.username}}</b></h2>
-                <p ng-click="toProfile(reply.username)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
+                <p ng-click="showChart(reply)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
               </div>
             </div>  
           </div>
