--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -3,7 +3,7 @@
     <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()">
     </ion-refresher>
     <ion-list type="in-set" >
-        <div class="list card" id="dataVisual" ng-controller="BitStreamCtrl" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
+        <div class="list card" ng-controller="BitStreamCtrl" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
             <div class="item item-avatar" >
                 <img ng-click="toProfile(BooleOut.username)" src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
@@ -19,7 +19,7 @@
                 <div class="item item-avatar" >
                     <img src="img/stock_picture.png">
                     <h2><b ng-click="toProfile(reply.username)">{{reply.username}}</b></h2>
-                    <p ng-click="toProfile(reply.username)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
+                    <p ng-click="showChart(reply)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
                 </div>
             </div>            
         </div>
