--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -8,10 +8,10 @@
     </ion-refresher>
     <ion-list type="in-set" >
         <div class="list card" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
-            <div class="item item-avatar" >
+            <div class="item item-avatar " >
                 <img src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
-                    <p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
+                    <h1><p ng-click="toProfile(BooleOut.username)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p></h1>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
 
