popular posts displayed

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -20,13 +20,22 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-followers"></ion-nav-view>
   </ion-tab> -->
 
+
+
   <!-- Account Tab -->
   <ion-tab title="Profile" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
+    <!-- Trending Tab -->
+    <ion-tab title="Popular" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/trending">
+        <ion-nav-view name="tab-trending"></ion-nav-view>
+    </ion-tab>
+
    <ion-tab title="Settings" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/settings">
     <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
+
+
 
 </ion-tabs>
