--- a/www/templates/tab-trending.html
+++ b/www/templates/tab-trending.html
@@ -5,7 +5,7 @@
 
                 <div class="item item-avatar" >
                     <h2><b ng-click="discover(ht.hashtag)"><a href="">#{{ht.hashtag}}</a></b></h2>
-                        total bits: {{ht.totalbits}}
+                    <p ng-click="showChart(ht.hashtag)">total bits: {{ht.totalbits}}</p>
                 </div>
 
                 <!--<div class="list card" ng-show="true" ng-repeat="booleOut in posts[ht.hashtag].booleOuts" type="item-text-wrap" href="#/tab/trending">-->
