added icons trending

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -28,7 +28,7 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
     <!-- Trending Tab -->
-    <ion-tab title="Popular" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/trending">
+    <ion-tab title="Popular" icon-off="ion-arrow-graph-up-right" icon-on="ion-arrow-graph-up-right" href="#/tab/trending">
         <ion-nav-view name="tab-trending"></ion-nav-view>
     </ion-tab>
 
