global bitstream displays on login, text-wrap implemented, small UI fixes

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -27,7 +27,9 @@
             <div class="item item-avatar" >
               <img src="img/stock_picture.png">
               <h2><b>{{BooleOut.username}}</b></h2>
-              <p ng-click="showChart(BooleOut)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
+            </div>
+            <div class="item item-text-wrap">
+              <p ng-click="showChart(BooleOut)"><b>{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</b></p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
 
