--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -11,7 +11,9 @@
             <div class="item item-avatar" >
                 <img ng-click="toProfile(BooleOut.username)" src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
-                    <p ng-click="showChart(BooleOut)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
+            </div>
+            <div class="item item-text-wrap">
+                    <p ng-click="showChart(BooleOut)"><b>{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</b></p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
                 <button class="buttonDown{{BooleOut._id}} button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]"></button>
@@ -32,7 +34,7 @@
     <ion-footer-bar class="bar-royal bitstream-footer">
     <div class="row">
         <div class="col col-66">
-            <input type="text" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
+            <input type="text" maxlength="144" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
         </div>
         <div class="col col-33">
             <div class="button-bar">
