--- a/www/templates/tab-trending.html
+++ b/www/templates/tab-trending.html
@@ -4,7 +4,7 @@
 
         <div class="row">
                 <button class="button button-royal" ng-show="!showall" ng-click="showTrending()">
-                    Go back to popular hashtags
+                    Back
                 </button>
         </div>
 
