added profile functionality in the sign up page

--- a/www/templates/image-popover.html
+++ b/www/templates/image-popover.html
@@ -1,4 +1,2 @@
-<div class="modal image-modal transparent" ng-click="closeModal()" ng-controller="imageController">
-	<img id="myimage" ng-repeat="image in images" ng-src="{{urlForImage(image)}}" height="200px"/>
+	 <img id="myimage" ng-src="{{urlForImage(image)}}" height="200px"/>
     <canvas width="300" height="300" id="mycanvas" style="display: none;"></canvas>
-</div>
