--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -42,15 +42,16 @@
           </div>
         </label>
         <p></p>
-         <!-- <label class="list" ng-controller="imageController" ng-click="showImages()">
+         <label class="list" ng-click="addImage()">
            <a class="item item-icon-left">
     <i class="icon ion-camera"></i>
     Add Profile Picture
   </a>
-        </label> -->
+        </label>          
+
   </label>
 
-        <button class="button button-block button-royal" ng-click="submitForm()">
+        <button ng-controller="SignUpCtrl" class="button button-block button-royal" ng-click="submitForm()">
           Create Account
         </button>
       </div>
