--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -8,14 +8,12 @@
        </p></p></div>
 
        <div class="list">
-        <div class="item item-input-inset">
-          <label class="item-input-wrapper">
-          <input type="text" placeholder="Change Bitname", ng-model="user.username">
-          </label>
-          <button class="button button-royal", ng-click="changeUsername(user)">
-            Submit
-          </button>
-        </div>
+       <label class="list" ng-click="addImage()">
+       <a class="addPic item item-icon-left">
+        <i class="icon ion-camera"></i>
+        Add Profile Picture
+      </a>
+    </label>  
 
         <div class="item item-input-inset">
           <label class="item-input-wrapper">
