--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
       <div class="padding profilePadding">
-       <div style="text-align: center"> <img src = "img/defaultProfile.png">
+       <div style="text-align: center"> <img src = "{{profileData.picture}}">
        <p><p>
        <i id="profileFont">{{profileData.firstName}} {{profileData.lastName}}</i>
        <br>
