fixes settings tab to show your own profile picture and no Yuriys

--- a/www/templates/tab-settings.html
+++ b/www/templates/tab-settings.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
       <div class="padding profilePadding">
-       <div style="text-align: center"> <img src = "img/yuriy.jpg">
+       <div style="text-align: center"> <img src = "{{pictureResult.picture}}">
        <p><p>
        <i id="usernameFont">Change Account Info</i>
        </p></p></div>
