changed welcome -> login spelling error

--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -2,7 +2,7 @@
 <ion-content  class="welcome-content" scroll="false">
 <div class="button-bar button-bottom">
   <a name="signup" class="button button-outline" ng-click="signUp()">Sign Up</a>
-  <a name="welcome" class="button button-outline" ng-click="welcome()">Login</a>
+  <a name="login" class="button button-outline" ng-click="welcome()">Login</a>
 </div>
 </ion-content>
 </ion-view>
