--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -1,4 +1,7 @@
 <ion-view view-title="BitStream">
+
+  <div name="Profile" href="#/tab/account"></div>
+
   <ion-content>
     <div class="button-bar">
         <a class="button button-royal" ng-click="refresh('global')">Global</a>
