--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -1,8 +1,11 @@
 <ion-view view-title="BitStream">
 
-  <div name="Profile" href="#/tab/account"></div>
+
 
   <ion-content>
+
+    <a href="#/tab/account"></a>
+
     <div class="button-bar">
         <a class="button button-royal" ng-click="refresh('global')">Global</a>
         <a class="button button-royal" ng-click="refresh('personal')">Personal</a>
