--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -1,10 +1,6 @@
 <ion-view view-title="BitStream">
 
-
-
   <ion-content>
-
-    <a href="#/tab/account"></a>
 
     <div class="button-bar">
         <a class="button button-royal" ng-click="refresh('global')">Global</a>
@@ -40,15 +36,17 @@
     <ion-footer-bar class="bar-royal bitstream-footer">
     <div class="row">
         <div class="col col-66">
-            <input type="text" maxlength="144" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
+            <input name="booleOutBox" type="text" maxlength="144" ng-model="bitstream.hashtag" placeholder="Enter Hashtag(s) (or not)"/>
         </div>
         <div class="col col-33">
             <div class="button-bar">
-                <a class="button button-royal" type="submit" ng-click="postBooleOut(1)">1</a>
-                <a class="button button-royal" type="submit" ng-click="postBooleOut(0)">0</a>
-            </div>           
+                <a name="post1" class="button button-royal" type="submit" ng-click="postBooleOut(1)">1</a>
+                <a name="post2" class="button button-royal" type="submit" ng-click="postBooleOut(0)">0</a>
+            </div>
         </div>
-    </div>       
+    </div>
+        <a name="Profile" visibility="hidden" href="#/tab/account">.</a>
+        <a name="Popular" visibility="hidden" href="#/tab/trending">.</a>
     </ion-footer-bar>
 </ion-view>
 
