--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -8,17 +8,10 @@
        <br>
        <i id="usernameFont">{{profileData.username}}</i>
        </p></p></div>
-       <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i> </p>
-      <p>
-        <i>Bits: {{profileData.bits}}</i>
-      </p>
-      <p>
-        <i>Ones: {{profileData.ones}}</i>
-      </p>
-      <p>
-        <i>Zeros: {{profileData.zeros}}</i>
-      </p>
-      <p>
+       <p> <i >Sign Up Date: {{profileData.signup_date[1]}}/{{profileData.signup_date[0]}}/{{profileData.signup_date[2]}}</i><br>
+        <i>Bits: {{profileData.bits}}</i><br>
+        <i>Ones: {{profileData.ones}}</i><br>
+        <i>Zeros: {{profileData.zeros}}</i><br>
         <i>Total: {{profileData.ones + profileData.zeros}}</i>
       </p>
 
