--- a/www/templates/tab-trending.html
+++ b/www/templates/tab-trending.html
@@ -2,15 +2,16 @@
 
     <ion-content>
 
-        <div class="row">
-                <button class="button button-royal" ng-show="!showall" ng-click="showTrending()">
+        <div class="container center-children">
+            <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()"></ion-refresher>
+                <button class="button button-royal"  ng-show="!showall" ng-click="showTrending()">
                     Trending
                 </button>
         </div>
 
         <ion-list type="in-set" >
 
-            <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()"></ion-refresher>
+
 
             <div ng-show="showall" ng-repeat="ht in Hashtag" type="item-text-wrap" href="#/tab/trending">
 
