--- a/www/templates/tab-bitstream.html
+++ b/www/templates/tab-bitstream.html
@@ -3,13 +3,13 @@
   <ion-content>
 
     <div class="button-bar">
-        <a class="button button-royal" ng-click="refresh('global')">Global</a>
-        <a class="button button-royal" ng-click="refresh('personal')">Personal</a>
+        <a class="button button-royal" ng-click="getStream('global')">Global</a>
+        <a class="button button-royal" ng-click="getStream('personal')">Personal</a>
     </div>
-    <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh('this')">
+    <ion-refresher pulling-text="Pull to Refresh" on-refresh="refresh()">
     </ion-refresher>
     <ion-list type="in-set" >
-        <div class="list card" ng-controller="BitStreamCtrl" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
+        <div class="list card" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
             <div class="item item-avatar" >
                 <img ng-click="toProfile(BooleOut.username)" src="img/stock_picture.png">
                 <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
