--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -16,29 +16,29 @@
       </p>
 
       <ion-list type="in-set" >
-          <div class="list card" ng-repeat="BooleOut in posts" type="item-text-wrap" >
+        <div class="list card" ng-repeat="BooleOut in posts" type="item-text-wrap" href="#/tab/bitstream">
             <div class="item item-avatar" >
-              <img src="img/stock_picture.png">
-              <h2><b>{{BooleOut.username}}</b></h2>
-              <p ng-click="showChart(BooleOut)">{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</p>
+                <img ng-click="toProfile(BooleOut.username)" src="img/stock_picture.png">
+                <h2><b ng-click="toProfile(BooleOut.username)">{{BooleOut.username}}</b></h2>
+            </div>
+            <div class="item item-text-wrap">
+                    <p ng-click="showChart(BooleOut)"><b>{{getBit(BooleOut.bit)}} {{getHashtags(BooleOut.hashtag)}}</b></p>
             </div>
             <div class="item tabs tabs-secondary tabs-icon-left">
-
-              <button class="buttonDown{{BooleOut._id}} button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]"></button>
-              <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id); replyShow[BooleOut._id] = true">
-              </button>
-
+                <button ng-show="BooleOut.noOfReplies > 0" class="buttonDown{{BooleOut._id}} button icon-left ion-chevron-down" href="#" ng-click="reply(BooleOut._id); replyShow[BooleOut._id] = !replyShow[BooleOut._id]">({{BooleOut.noOfReplies}})</button>
+                <button class="button icon-left ion-chatbox" href="" ng-click="replyPopup(BooleOut._id); replyShow[BooleOut._id] = true">
+                </button>
             </div>
 
             <div class="list card" ng-show="replyShow[BooleOut._id]" ng-repeat="reply in allReplies[BooleOut._id]" type="item-text-wrap" href="#/tab/bitstream">
-              <div class="item item-avatar" >
-                <img src="img/stock_picture.png">
-                <h2><b ng-click="toProfile(reply.username)">{{reply.username}}</b></h2>
-                <p ng-click="showChart(reply)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
-              </div>
-            </div>  
-          </div>
-        </ion-list>
+                <div class="item item-avatar" >
+                    <img src="img/stock_picture.png">
+                    <h2><b ng-click="toProfile(reply.username)">{{reply.username}}</b></h2>
+                    <p ng-click="showChart(reply)">{{getBit(reply.bit)}} {{getHashtags(reply.hashtag)}}</p>
+                </div>
+            </div>            
+        </div>
+      </ion-list>
 
       </div>
     </div>
